force-app/main/default/objects/Person_with_Significant_Control__c/Person_with_Significant_Control__c.object-meta.xml
<CustomObject>
    <label>Person with Significant Control</label>
    <nameField>
        <label>Person with Significant Control Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Person with Significant Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>