force-app/main/default/objects/Person_with_Significant_Control__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Person with Significant Controls</relationshipLabel>
    <relationshipName>Person_with_Significant_Controls</relationshipName>
    <type>Lookup</type>
</CustomField>