force-app/main/default/objects/Person_with_Significant_Control__c/fields/Ceased_On__c.field-meta.xml
<CustomField>
    <fullName>Ceased_On__c</fullName>
    <label>Ceased On</label>
    <type>Date</type>
</CustomField>