force-app/main/default/objects/Person_with_Significant_Control__c/fields/ETag__c.field-meta.xml
<CustomField>
    <fullName>ETag__c</fullName>
    <externalId>true</externalId>
    <label>ETag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>