force-app/main/default/objects/Person_with_Significant_Control__c/fields/Is_Ceased__c.field-meta.xml
<CustomField>
    <fullName>Is_Ceased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Ceased?</label>
    <type>Checkbox</type>
</CustomField>